# rustlings

./: .gitignore  Cargo.toml
anagram/: Cargo.toml
anagram/src/: main.rs  main0.rs
src/: main  main.rs  main0.rs  main00.rs  main000.rs
