[package]
name = "duplicate"
version = "0.1.0"
authors = ["Abib Duut <abibduut@gmail.com>"]
description = "A Simple program to check for duplicate numbers"
license = "MIT"

[dependencies]
# Add dependencies here

[build]
target = "x86_64-apple-darwin"

[profile.release]
# [0,  3] balance between compile time and runtime perf
opt-level = 0   
# link time optimization (LTO)
lto = true  
# [1, 256] Max optimization, fast compilation but slow runtime 
codegen-units = 1 